--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-fabricjs",
   "version": "0.1.2",
   "description": "fabricjs implemented by react",
-  "main": "./src/react-fabric.js",
+  "main": "lib/main.js",
   "keywords": [
     "canvas",
     "graphic",
